tests/errors/test_01.x
// Return type of main is not int

fn main() -> void {}